
[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "srsgui"
authors = [
    {name = "Chulhoon Kim"},
]
description = "Framework to run instrument-controlling Python scripts in GUI"
readme = "README.md"
requires-python = ">=3.7"
keywords = ["instrument control", "data acquisition", "data visualization"]
license = {text = "MIT license"}
classifiers = [
        "Development Status :: 3 - Alpha",
        "Intended Audience :: Science/Research",
        "License :: OSI Approved :: MIT License",
        "Programming Language :: Python :: 3.7",
        "Programming Language :: Python :: 3.8",
        "Programming Language :: Python :: 3.9",
        "Topic :: Scientific/Engineering"
]
dependencies = [
    "pyserial >= 3",
]
dynamic = ["version"]

[tool.setuptools.dynamic]
version = {attr = "srsgui.__version__"}

[project.optional-dependencies]
full = ['matplotlib >= 3.6.2', 'pyside6 != 6.5.0']

[project.urls]
homepage = "https://github.com/thinkSRS/srsgui"
repository = "https://github.com/thinkSRS/srsgui.git"
documentation = "https://thinksrs.github.io/srsgui"

[project.scripts]
srsgui = "srsgui.__main__:main"

# ... other project metadata fields as specified in:
#     https://packaging.python.org/en/latest/specifications/declaring-project-metadata/